# evolution-of-todo-list-01

./: .gitignore  API_DOCS.md  QWEN.md  README.md  audit_codebase.py  constitution.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  refactored_hero_features.html  test_api.html
.github/: FUNDING.yml
.qwen/agents/: auth-debugger.md  backend-debugger.md  frontend-builder.md  frontend-debugger.md
.specify/memory/: constitution.md
.specify/templates/: phr-template.prompt.md  plan-template.md  spec-template.md  tasks-template.md
backend/: .dockerignore  .gitignore  Dockerfile  SECRET_KEY_GENERATION.md  alembic.ini  pyproject.toml  requirements.txt  todo_test.db
backend/alembic/: env.py
backend/alembic/versions/: 94c970ec5d24_initial_schema.py
backend/scripts/: test_auth_flow.py  test_full_auth.py  test_repo.py  test_task_endpoints.py  test_user_isolation.py  verify_phase2_complete.py
backend/src/: main.py
backend/src/api/: deps.py  health_router.py
backend/src/api/v1/endpoints/: auth.py  tasks.py  users.py
backend/src/core/: security.py
backend/src/db/: connection.py  session.py
backend/src/middleware/: auth_middleware.py  circuit_breaker.py  rate_limit.py
backend/src/models/: __init__.py  task.py  token.py  user.py
backend/src/repositories/: task_repository.py  user_repository.py
backend/src/services/: __init__.py  auth_service.py  task_service.py
backend/src/utils/: __init__.py  jwt.py  password.py
backend/tests/unit/: test_password_validation.py
frontend/: .gitignore  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: CherryBlossom.tsx  CreateTaskForm.tsx  Navbar.tsx  Providers.tsx  TaskItem.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/types/: cookie.d.ts
history/adr/: 001-frontend-technology-stack-selection.md  001-layered-architecture-pattern.md  002-backend-technology-stack-selection.md  002-technology-stack-selection.md  003-authentication-session-management-approach.md  003-in-memory-storage-strategy.md  004-data-architecture-persistence-strategy.md  004-data-validation-approach.md  005-api-design-architecture-pattern.md
specs/1-specify/: system-overview.md
specs/2-plan/: data-model.md  phase-1-console.md  phase-2-fullstack.md  quickstart.md  research.md
specs/3-tasks/: phase-1-tasks.md  phase-2-tasks.md
src/: main.py
src/cli/: interface.py
src/models/: task.py
src/repositories/: task_repository.py
src/services/: task_service.py
tests/: test_env.py
tests/integration/: test_end_to_end.py
tests/unit/: test_add_task.py  test_cli.py  test_complete_delete_task.py  test_domain_task.py  test_main.py  test_password_validation.py  test_repository.py  test_service.py  test_update_task.py  test_view_tasks.py
(+89 files in other folders)
